# FlowGate

./: .gitignore  README.md  USER_GUIDE.md  install_check.py  pyproject.toml  run_flowgate.py
examples/: batch_gate.py  generate_demo_fcs.py  python_api_example.py
flowgate/: __init__.py  app.py  fcs_io.py  gates.py
