[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "flowgate"
version = "0.1.0"
description = "Open-source manual FCS gating application — a FlowJo alternative in Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
  { name = "FlowGate Contributors" }
]

keywords = [
  "flow cytometry", "FCS", "gating", "bioinformatics",
  "MIBI", "immunology", "single-cell",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Visualization",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "flowio>=1.3",
  "numpy>=1.22",
  "matplotlib>=3.7",
  "scipy>=1.9",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
flowgate = "flowgate.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowgate*"]
